--- a/arch/arm64/configs/elementalx_defconfig
+++ b/arch/arm64/configs/elementalx_defconfig
@@ -37,7 +37,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ElementalX-OP3-0.11-cm"
+CONFIG_LOCALVERSION="-ElementalX-OP3-0.14-cm"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 # CONFIG_SWAP is not set
@@ -2142,6 +2142,7 @@ CONFIG_SMB1351_USB_CHARGER=y
 CONFIG_QPNP_SMBCHARGER=y
 CONFIG_QPNP_FG=y
 CONFIG_FG_BQ27541=y
+CONFIG_ONEPLUS_FASTCHG=y
 CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_BMS is not set
@@ -3636,7 +3637,7 @@ CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
 # CONFIG_MSM_GLADIATOR_HANG_DETECT is not set
 CONFIG_MSM_CPU_PWR_CTL=y
 CONFIG_MSM_CACHE_M4M_ERP64=y
-CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_CE=y
+# CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_CE is not set
 CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_UE=y
 CONFIG_MSM_RPM_SMD=y
 # CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
@@ -3891,9 +3892,7 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-CONFIG_NTFS_FS=y
-# CONFIG_NTFS_DEBUG is not set
-CONFIG_NTFS_RW=y
+# CONFIG_NTFS_FS is not set
 
 #
 # Pseudo filesystems
