--- a/arch/arm64/configs/kazari_op3_defconfig
+++ b/arch/arm64/configs/kazari_op3_defconfig
@@ -37,7 +37,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ElementalX-OP3-0.24-cm"
+CONFIG_LOCALVERSION="_kazari-op3-kernel_v1.0-e024"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 # CONFIG_SWAP is not set
