--- a/arch/arm64/configs/kazari_op3_defconfig
+++ b/arch/arm64/configs/kazari_op3_defconfig
@@ -38,7 +38,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION="_kazari-op3-kernel_v1.0-e025"
-# BASE_CONFIG_LOCALVERSION="-ElementalX-OP3-0.25-cm"
+# BASE_CONFIG_LOCALVERSION="-ElementalX-OP3-0.26-cm"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 # CONFIG_SWAP is not set
@@ -288,12 +288,14 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
 CONFIG_DEFAULT_FIOPS=y
+# CONFIG_DEFAULT_ZEN is not set
 CONFIG_DEFAULT_IOSCHED="fiops"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
